# gateway-demo

./: Cargo.toml  README.md  package-build-artefacts-linux.sh
backend/: Cargo.toml  install  override.conf  pre-start
backend/src/: http_server.rs  main.rs  tamper_switch.rs
frontend/: Cargo.toml  README.md  index.html  index.scss  trunk.toml
frontend/src/: app.rs
