[workspace]
resolver = "2"

members = [
    "backend",
    "frontend",
]

[workspace.dependencies]
axum = "0.7.5"
clap = "4.5.16"
env_logger = "0.11.5"
futures = "0.3.30"
gpio-cdev = "0.6.0"
gloo-net = "0.6.0"
log = "0.4.22"
tokio = "1.39.3"
tokio-stream = "0.1.14"
tower-http = "0.5.2"
yew = "0.20"
