[package]
name = "gateway-demo-frontend"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
futures = { workspace = true }
gloo-net = { workspace = true }
gloo-timers = { workspace = true }
js-sys = { workspace = true }
yew = { workspace = true, features = ["csr"] }
